# awc

./: .gitignore  Makefile  Package.resolved  Package.swift  README.rst  flake.nix
Sources/CCairo/: module.modulemap
Sources/CEpoll/: module.modulemap  shim.h
Sources/CWaylandEgl/: module.modulemap  shim.h
Sources/CXkbCommon/: module.modulemap  shim.h
Sources/Cairo/: Context.swift  Surface.swift  module.modulemap  shim.h
Sources/ClientCommons/: Egl.swift  LayerSurfaceListener.swift  Output.swift  RegistryListener.swift  Seat.swift  TypedOpaque.swift  XdgOutput.swift
Sources/ControlProtocol/: Control Protocol.swift
Sources/DataStructures/: Box.swift
Sources/Drm/: module.modulemap  shim.h
Sources/EGlext/: module.modulemap  shim.h
Sources/Gles2ext/: module.modulemap  shim.h
Sources/Gles32/: module.modulemap  shim.h
Sources/LayerShellClient/: module.modulemap  shim.h
Sources/LayerShellClientImpl/: bind.c
Sources/LayoutSwitcher/: Cargo.toml
Sources/LayoutSwitcher/src/: main.rs
Sources/LayoutVisualizer/: main.swift
Sources/Libawc/: AnyLayout.swift  Config.swift  Control Protocol.swift  ExtensionDataProvider.swift  Layout.swift  Wlroots Extensions.swift
Sources/NeonRenderer/: Matrix.swift  Neon.swift  OpenGL.swift
Sources/NeonSlurp/: main.swift
Sources/OutputHud/: Event Loop.swift  IPC.swift  Output HUD.swift  main.swift
Sources/SpawnHelper/: main.c
Sources/Wlroots/: wlroots.c
Sources/awc/: Actions.swift  CLI Arguments.swift  Config.swift  Control Server.swift  (+16 more)
Tests/: LinuxMain.swift
Tools/: validate_shaders.py
nixos/: swift.nix
(+63 files in other folders)
